Tue Apr 20 21:03:24 1999  George Lebl  <jirka@5z.com>

	* gnome-util.c: (g_file_exists) fix warning by returning FALSE from
	  the assert

	* gnome-moz-remote.c: fix warning by returning 0 on the end of main

1999-04-16  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-triggersP.h: Remove external declaration as it is static.
	Bug found by Ian Main on OpenBSD.

1999-04-13  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-mime.c (mime_load): Fix memory leak, thanks again for
	Morten for his careful reading of the source code.   This was a
	side effect of the gnome.mime and user.mime additions. 

1999-04-12  Jonathan Blandford  <jrb@redhat.com>

	* gnome-util.c (g_file_exists): sanity check to make sure filename
	exists.

Sat Apr 10 20:56:25 1999  ape@lrdpf.spacetec.no  (Asbjorn Pettersen)

	* gnome-triggers.c (gnome_triggers_readfile): 
	* gnome-fileconvert.c (load_types_from): Open file in TEXT mode.

Fri Apr 09 18:47:46 1999  George Lebl  <jirka@5z.com>

	* gnome-config.c: documentation fixes and minor cleanups

	* gnome-dentry.c: fix a problem with _save, as we have to push
	  an empty section in case our caller pushed a different section

1999-04-08  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-config.c (access_config_extended): Memory leak fix.
	Thanks to Morten Wellinder for pointing this out again.

	* gnome-help.c (gnome_help_file_find_file): Do not overwrite freed
	memory. 

Thu Apr  8 21:50:12 1999  ape@lrdpf.spacetec.no  (Asbjorn Pettersen)

	* gnome-score.c (gnome_score_get_notable): Open files in text mode.

1999-04-05 Owen Taylor  <otaylor@redhat.com>

	* gnome-dentry.c (gnome_desktop_entry_launch_with_args): Always
	use /bin/sh to launch desktop entries, not the user shell.

1999-03-11 Owen Taylor  <otaylor@redhat.com>

	* gnome-dentry.[ch]: Add support for reading in .kdelnk
	files and doing the proper subsitutions when launching
	.kdelnk files.

1999-04-05  Owen Taylor  <otaylor@redhat.com>
